# lib-CppFCPLib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  vcpkg.json
.github/workflows/: CI.yml  docs.yml
examples/: CMakeLists.txt  hello.cc
include/: fcp++.hpp
include/fcp++/: client.hpp  node.hpp  request.hpp  response.hpp
include/fcp++/codec/: base64.hpp
include/fcp++/crypto/: sha2.hpp
include/fcp++/protocol/: request.hpp  response.hpp
include/fcp++/ssk/: keypair.hpp
src/: AdditionalFields.h  Base64.cpp  Base64.h  CMakeLists.txt  FCPResult.h  JobTicket.cpp  Node.cpp  NodeThread.cpp  NodeThread.h  Server.cpp  ServerMessage.cpp  client.cc
tests/: CMakeLists.txt  test_base64.cc
